# yls

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE-THIRD-PARTY  README.md  SECURITY.md  cliff.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pages.yml  test.yml
docs/: _config.yml  developing.md  faq.md  features.md  index.md  installation.md  updating.md
editors/vscode/: .gitignore  .vscodeignore  LICENSE  README.md  eslint.config.mjs  package.json
editors/vscode/language/: config.json  yara.tmLanguage.json
editors/vscode/src/: extension.ts
editors/vscode/src/test/: runTest.ts
plugins/yls-yara/: README.md  pyproject.toml
plugins/yls-yara/tests/: test_yls_avast.py
plugins/yls-yara/yls_yara/: __init__.py  linting.py
plugins/yls-yari/: README.md  pyproject.toml
plugins/yls-yari/yls_yari/: __init__.py  debugger.py
pytest-yls/: README.md  pyproject.toml
pytest-yls/pytest_yls/: __init__.py  plugin.py  utils.py
tests/: conftest.py
tests/integration/: test_code_actions.py  test_completion.py  test_definition.py  test_formatting.py  test_hover.py  test_linting.py  test_signature_help.py  test_torture.py
tests/unit/: test_completion_cache.py  test_debugger.py  test_snippet_string.py  test_snippets.py  test_strings.py  test_unit_code_actions.py  test_utils.py
yls/: __init__.py  code_actions.py  completer.py  completion.py  debugger.py  hookspecs.py  hover.py  icons.py  linting.py  plugin_manager_provider.py  server.py  snippet_string.py  snippets.py  strings.py  utils.py  yaramod_provider.py
