[tool.poetry]
name = "yls"
version = "1.4.3"
description = "YARA Language Server"
authors = ["Matej Kašťák <matej.kastak@avast.com>"]
maintainers = ["Matej Kašťák <matej.kastak@avast.com>"]
readme = "README.md"
license = "MIT"
include = ["py.typed", "LICENSE", "LICENSE-THIRD-PARTY"]

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
poethepoet = "^0.29.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-black = "^0.3.12"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-mypy = "^0.10.3"
pytest-pylint = "^0.21.0"
pytest-yls = {path = "./pytest-yls", develop = true}

[tool.black]
line-length = 100
skip-magic-trailing-comma = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | venv
)/
'''

[tool.isort]
profile = "black"
force_single_line = true

[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
format = ["_isort", "_black"]
test = "pytest -vvv --mypy --black --pylint --pylint-rcfile=pyproject.toml --cov=yls --cov-report=term-missing -l ./yls ./tests"

[tool.poetry.scripts]
yls = 'yls.server:main'

[tool.poetry.dependencies]
python = "^3.8"
pygls = "^1.3.1"
yaramod = "^3.23.0"
yari-py = "^0.2.1"
pluggy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]


[tool.mypy]
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true
strict = true
warn_unused_ignores = true

[tool.pylint.master]
good-names = "ls,logger,x,y,c,e,i,j,n,m,f"
ignored-classes = "_HookRelay"
extension-pkg-allow-list = "yaramod"

[tool.pylint.messages_control]
disable = """,
    cyclic-import,
    fixme,
    line-too-long,
    logging-format-interpolation,
    logging-fstring-interpolation,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    no-else-return,
    redefined-outer-name,
    too-few-public-methods,
    too-many-arguments,
    too-many-return-statements,
    wrong-import-order
    """
