[tool.poetry]
name = "pytest-yls"
version = "1.4.3"
description = "Pytest plugin to test the YLS as a whole."
authors = ["Matej Kastak <matej.kastak@avast.com>"]
maintainers = ["Matej Kašťák <matej.kastak@avast.com>"]
readme = "README.md"
license = "MIT"
include = ["py.typed", "LICENSE"]

[tool.poetry.dependencies]
pytest = "^8.3.3"
python = "^3.8"
tenacity = "^9.0.0"

[tool.poetry.plugins.pytest11]
pytest_yls = "pytest_yls"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
