[tool.poetry]
name = "yls-yara"
version = "1.4.3"
description = "YLS plugin adding linting using yara-python."
authors = ["Matej Kastak <matej.kastak@avast.com>"]
maintainers = ["Matej Kašťák <matej.kastak@avast.com>"]
readme = "README.md"
license = "MIT"
include = ["py.typed", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
yara-python = "^4.5.1"
yls = "^1.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.yls]
yara = "yls_yara"
